Upgrade Vaadin to 25.2.6